# caroline-download

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: lint.yml
api_reference/: index.html
docs/: api_reference.md  howto.md  index.md  installation.md  usage.md
howto/: index.html
installation/: index.html
src/caroline_download/: __init__.py  cli.py  config.py  download.py
usage/: index.html
